# security-and-cryptography-assignments

./: .gitmodules  README.md
assignment 01/: assignment_1.tex
assignment 04/task1/assembly-example/: hello.s
assignment 04/task2/c/: task2.c
assignment 04/task2/cpp/: task2.cpp
assignment 04/task2/rust/: task2.rs
assignment 05/: assignment_5.tex
assignment 06/: assignment_6.tex
assignment 06/task1/password-cracking/: CMakeLists.txt
assignment 06/task2/cs-auth/: README.md  package-lock.json
assignment 06/task2/cs-auth/src/components/: Registration.vue
assignment 07/: modular-arithmetic.py  shift-cipher.py  task3.py  vigenere.py
assignment 08/: caesar-cbc.py
assignment 09/: caesar-cbcmac.py  ctr-keystream.py
assignment 1/: assignment_1.tex
assignment 10/: diffie-hellmann.py  euclid-extended.py  fermat.py  pollard.py  powers-table.py  rsa-repeated-squaring.py  rsa_repeated_squaring.py
assignment 11/: assignment_11.tex
assignment 2/: assignment_2.tex
assignment 3/: assignment_3.tex
assignment 4/: assignment_4.tex
assignment 6/task1/password-cracking/: passwordcracking.cpp
assignment 6/task2/cs-auth/: package.json
assignment 6/task2/cs-auth/src/: App.vue  server.js
assignment 6/task2/cs-auth/src/assets/: main.css
assignment 6/task2/cs-auth/src/components/: Home.vue  Login.vue
assignment 7/: bruteforce.txt  modular-arithmetic.py  shift-cipher.py  task3.py  vigenere.py
assignment 8/: assignment_8.tex  task2.py
assignment 9/: ctr-keystream.py
